# Exo_Collection_System

./: .gitignore  ARCHITECTURE.md  Build_Windows.cmd  First_Time_Setup.cmd  First_Time_Setup_And_Build.cmd  MOTOR_POSITION_FEEDBACK_DIAGNOSIS.md  README.md  Run_ExoCollector.cmd  Run_ExoCollector_From_Source.cmd  Run_ExoDataStudio.cmd  Run_ExoDataStudio_From_Source.cmd  build_exe.py  first_time_setup_and_build.py  prompt.md  pyproject.toml  run_collector.py  run_data_studio.py
config/: app.json  storage.json
config/devices/: hardware.json  simulated.json
config/protocols/: default.json
config/quality_rules/: default.json
log/: README.md
packaging/: build_windows.ps1  collector.spec  data_studio.spec
packaging/installer/: ExoCollectionSystem.iss  README.md  README_START_HERE.txt
schemas/: README.md  manifest-v1.0.0.json  manifest-v1.1.0.json
scripts/: first_time_setup_and_build.ps1  run_from_source.ps1
src/exo_collection/: __init__.py  logging_setup.py
tests/integration/: test_continuous_recording_spawn.py  test_experiment_metadata_persistence.py  test_hardware_profile_trial.py  test_simulated_trial.py
tests/unit/: test_adapters.py  test_app_settings.py  test_binary_block.py  test_block_binary_process.py  test_catalog.py  test_clock_model.py  test_collector_preflight.py  test_collector_ui.py  test_data_studio.py  test_data_studio_diagnostics.py  test_data_studio_local_tools.py  test_data_studio_management.py  test_data_studio_management_ui.py  test_data_studio_playback.py  test_device_preview.py  test_device_profiles.py  test_elonxi_adapter.py  test_experiment_metadata.py  test_external_importer.py  test_external_recording_stream.py  (+21 more)
(+94 files in other folders)
