[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exo-collection-system"
version = "0.1.0"
description = "Local-first multimodal exoskeleton data collection and review system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "Exo Collection System Team" }]
dependencies = [
  "alembic>=1.13,<2",
  "h5py>=3.10,<4",
  # Xsens MT SDK 2025.2 cp311 wheel is built against the NumPy 1.x ABI.
  "numpy>=1.26,<2",
  "paramiko>=3.4,<5",
  "pydantic>=2.7,<3",
  "PySide6>=6.7,<7",
  "pyqtgraph>=0.13.7,<0.15",
  "scp>=0.15,<1",
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100,<7",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
]
packaging = ["pyinstaller>=6.8,<7"]
hardware = [
  "pyserial>=3.5,<4",
  "pythonnet>=3.0,<4",
  "zeroconf>=0.132,<1",
]

[project.scripts]
exo-collector = "exo_collection.apps.collector.main:main"
exo-data-studio = "exo_collection.apps.data_studio.main:main"
exo-simulate-trial = "exo_collection.orchestration.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exo_collection = ["catalog/migrations/**/*.py"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: tests that exercise multiple subsystems",
  "gui: tests that instantiate a Qt application",
]

[tool.coverage.run]
branch = true
source = ["exo_collection"]
